logs/dag_id=ETL_Flow/run_id=scheduled__2024-04-26T211100+0000/task_id=insert_data_from_files/attempt=10.log
[2024-04-28T15:04:57.166+0000] {taskinstance.py:1979} INFO - Dependencies all met for dep_context=non-requeueable deps ti=<TaskInstance: ETL_Flow.insert_data_from_files scheduled__2024-04-26T21:11:00+00:00 [queued]>
[2024-04-28T15:04:57.181+0000] {taskinstance.py:1979} INFO - Dependencies all met for dep_context=requeueable deps ti=<TaskInstance: ETL_Flow.insert_data_from_files scheduled__2024-04-26T21:11:00+00:00 [queued]>
[2024-04-28T15:04:57.182+0000] {taskinstance.py:2193} INFO - Starting attempt 10 of 15
[2024-04-28T15:04:57.199+0000] {taskinstance.py:2214} INFO - Executing <Task(PythonOperator): insert_data_from_files> on 2024-04-26 21:11:00+00:00
[2024-04-28T15:04:57.206+0000] {standard_task_runner.py:60} INFO - Started process 3514 to run task
[2024-04-28T15:04:57.213+0000] {standard_task_runner.py:87} INFO - Running: ['***', 'tasks', 'run', 'ETL_Flow', 'insert_data_from_files', 'scheduled__2024-04-26T21:11:00+00:00', '--job-id', '3000', '--raw', '--subdir', 'DAGS_FOLDER/ETL.py', '--cfg-path', '/tmp/tmpwny82rs7']
[2024-04-28T15:04:57.222+0000] {standard_task_runner.py:88} INFO - Job 3000: Subtask insert_data_from_files
[2024-04-28T15:04:57.316+0000] {task_command.py:423} INFO - Running <TaskInstance: ETL_Flow.insert_data_from_files scheduled__2024-04-26T21:11:00+00:00 [running]> on host d838c4eb4dcc
[2024-04-28T15:04:57.736+0000] {taskinstance.py:2510} INFO - Exporting env vars: AIRFLOW_CTX_DAG_OWNER='coder2j' AIRFLOW_CTX_DAG_ID='ETL_Flow' AIRFLOW_CTX_TASK_ID='insert_data_from_files' AIRFLOW_CTX_EXECUTION_DATE='2024-04-26T21:11:00+00:00' AIRFLOW_CTX_TRY_NUMBER='10' AIRFLOW_CTX_DAG_RUN_ID='scheduled__2024-04-26T21:11:00+00:00'
[2024-04-28T15:04:58.199+0000] {base.py:83} INFO - Using connection ID 'postgres_localhost' for task execution.
[2024-04-28T15:04:58.224+0000] {taskinstance.py:2728} ERROR - Task failed with exception
Traceback (most recent call last):
  File "/home/airflow/.local/lib/python3.8/site-packages/airflow/models/taskinstance.py", line 444, in _execute_task
    result = _execute_callable(context=context, **execute_callable_kwargs)
  File "/home/airflow/.local/lib/python3.8/site-packages/airflow/models/taskinstance.py", line 414, in _execute_callable
    return execute_callable(context=context, **execute_callable_kwargs)
  File "/home/airflow/.local/lib/python3.8/site-packages/airflow/operators/python.py", line 200, in execute
    return_value = self.execute_callable()
  File "/home/airflow/.local/lib/python3.8/site-packages/airflow/operators/python.py", line 217, in execute_callable
    return self.python_callable(*self.op_args, **self.op_kwargs)
  File "/opt/airflow/dags/data_insertion.py", line 15, in insert_data_from_files
    pg_hook.insert_rows(table=table_name, rows=df.values.tolist())
  File "/home/airflow/.local/lib/python3.8/site-packages/airflow/providers/common/sql/hooks/sql.py", line 565, in insert_rows
    cur.execute(sql, values)
psycopg2.errors.SyntaxError: INSERT has more expressions than target columns
LINE 1: ...'2024-04-01T00:00:00'::timestamp,'Google','valid','2024-04-0...
                                                             ^

[2024-04-28T15:04:58.243+0000] {taskinstance.py:1149} INFO - Marking task as UP_FOR_RETRY. dag_id=ETL_Flow, task_id=insert_data_from_files, execution_date=20240426T211100, start_date=20240428T150457, end_date=20240428T150458
[2024-04-28T15:04:58.280+0000] {standard_task_runner.py:107} ERROR - Failed to execute job 3000 for task insert_data_from_files (INSERT has more expressions than target columns
LINE 1: ...'2024-04-01T00:00:00'::timestamp,'Google','valid','2024-04-0...
                                                             ^
; 3514)
[2024-04-28T15:04:58.310+0000] {local_task_job_runner.py:234} INFO - Task exited with return code 1
[2024-04-28T15:04:58.330+0000] {warnings.py:109} WARNING - /home/***/.local/lib/python3.8/site-packages/***/models/baseoperator.py:1201: AirflowProviderDeprecationWarning: Call to deprecated class PostgresOperator. (Please use `***.providers.common.sql.operators.sql.SQLExecuteQueryOperator`.Also, you can provide `hook_params={'schema': <database>}`.)
  result = cls.__new__(cls)

[2024-04-28T15:04:58.363+0000] {taskinstance.py:3309} INFO - 0 downstream tasks scheduled from follow-on schedule check
